

                 SCons - a software construction tool

                            Change Log

RELEASE 2.3.2.alpha.yyyymmdd - NEW DATE WILL BE INSERTED HERE

  From Russel Winder:
    - Revamp of the D language support. Tools for DMD, GDC and LDC provided
      and integrated with the C and C++ linking.   NB  This is only tested with
      D v2, D v1 is now deprecated.

  From Paweł Tomulik:
    - Fix SConf tests that write output

  From Gary Oberbrunner:
    - get default RPM architecture more robustly when building RPMs

  From Shane Gannon:
    - Support for Visual Studio 2013 (12.0)

  From Sye van der Veen:
    - Support for Visual Studio 12.0Exp, and fixes for earlier MSVS
      versions.

  From Anatoly Techtonik:
    - Several improvements for running scons.py from source:
      * engine files form source directory take priority over all other
        importable versions
      * message about scons.py running from source is removed to fix tests
        that were failing because of this extra line in the output
      * error message when SCons import fails now lists lookup paths
    - Remove support for QMTest harness from runtest.py

  From Dirk Baechle:
    - Update XML doc editor configuration

  From Rob Managan:
    - Updated the TeX builder to support use of the -synctex=1
      option and the files it creates.
    - Updated the TeX builder to correctly clean auxiliary files when
      the biblatex package is used.

RELEASE 2.3.1

  From Andrew Featherstone:
    - Added support for EPUB output format to the DocBook tool.

  From Tom Tanner:
    - Stop leaking file handles to subprocesses by switching to using subprocess
      always.
    - Allow multiple options to be specified with --debug=a,b,c
    - Add support for a readonly cache (--cache-readonly)
    - Always print stats if requested
    - Generally try harder to print out a message on build errors
    - Adds a switch to warn on missing targets