@@ -6,6 +6,9 @@
 
 RELEASE 2.3.2.alpha.yyyymmdd - NEW DATE WILL BE INSERTED HERE
 
+  From Amir Szekely:
+    - Fixed NoClean() for multi-target builders (#2353).
+
   From Russel Winder:
     - Revamp of the D language support. Tools for DMD, GDC and LDC provided
       and integrated with the C and C++ linking.   NB  This is only tested with
